Fix Price item on Card issue
The price item on each individual card on the explore page was not showing up, so fixed issue but moving it up. It also solved problem where the heart being in the wrong place.

--- a/client/src/components/Cards.css
+++ b/client/src/components/Cards.css
@@ -1,5 +1,5 @@
 .cards {
-  padding: 4rem 4rem;
+  padding: 4rem;
   background: #fff;
   font-family: 'Nunito', sans-serif;
   color: #162031;
@@ -9,11 +9,13 @@ h1 {
   text-align: center;
 }
 
+/*wrap cards in one card first*/
 .cards__wrapper {
   position: relative;
   margin: -100px 0 45px;
 }
 
+/*wrap for cards.jsx*/
 .cards__items {
   margin-bottom: 24px;
   display: flex;
@@ -22,6 +24,7 @@ h1 {
   align-items: center;
 }
 
+/*this is wrap for cardItem.jsx*/
 .cards__item {
   display: flex;
   justify-content: center;
@@ -30,6 +33,7 @@ h1 {
   margin: 1rem 1rem;
 }
 
+/*wrap for image for the card that takes up top half of card*/
 .card_item_bckgrd{
   display: flex;
   flex-direction: column;
@@ -45,6 +49,7 @@ h1 {
   margin-right: 10px;
 }
 
+/*the img for the listing*/
 .card_item_img {
   position: relative;
   overflow: hidden;
@@ -54,6 +59,7 @@ h1 {
   border-top-right-radius: 10px;
 }
 
+/*container for elements that go inside the picture*/
 .card_item_img_inside {
   position: absolute;
   top: 0;
@@ -64,6 +70,7 @@ h1 {
   /* border-top-left-radius: 0.5rem; */
 }
 
+/*location*/
 .heading_post {
   transition-duration: 700ms;
   text-align: left;
@@ -75,24 +82,18 @@ h1 {
   text-decoration: none;
 }
 
+/*style for the location*/
 .card_header {
-  font-size: 28px;
-  margin-top: 5px;
-  margin-bottom: -6px;
+  font-size: 25px;
   font-weight: 500;
-  /* text-decoration: none; */
-}
-.card_header:visited{
-  color: #162031;
-}
-.card_header:hover{
-  color: #FFD77B;
 }
 
+/*when hover over heading*/
 .heading_post:hover {
   color: #FFD77B;
 }
 
+/*wrap the body of the card, the description*/
 .card_body_wrap {
   padding-right: 18px;
   padding-left: 16px;
@@ -166,18 +167,6 @@ h1 {
   transition-duration:500ms;
 }
 
-/* .card_body_inside:hover {
-  transform: translateY(-1px);
-  display: inline-block;
-  background-color: fuchsia;
-  color: #fff;
-  font-size: 1rem;
-  font-weight: 500;
-  border-radius: 9999px;
-  padding: 8px 24px;
-  cursor: pointer;
-} */
-
 /*for the rating inside the picture frame */
 .cards_item_rating_box {
   padding: 20px 30px 30px;
@@ -187,7 +176,7 @@ h1 {
 .cards_item_rating {
   position: absolute;
   width: 100%;
-  padding-top: 59.5%;
+  padding-top: 160px;
   overflow: hidden;
   z-index: 1;
 }
@@ -199,7 +188,7 @@ h1 {
   margin-left: 0px;
   padding: 6px 8px;
   max-width: calc((100%) - 60px);
-  font-size: 12.3px;
+  font-size: 12px;
   font-weight: 600;
   color: #fff;
   background-color: #1f98f4;
@@ -228,11 +217,12 @@ depending on size of screen using flexboxes */
 
 .card_heart {
   position: absolute;
+  width: 100%;
+  padding-top: 58%;
+  padding-left: 91%;
   font-size: 25px;
   color: #50A5FF;
   z-index: 1;
-  right: 2px;
-  bottom: -8px;
 }
 .card_heart_box::after {
   content: attr(data-category);
@@ -248,17 +238,3 @@ depending on size of screen using flexboxes */
   box-sizing: border-box;
 }
 
-.delete_button {
-  /* border: 5px solid blue; */
-  z-index: 1;
-  top: 0px;
-  right: 0px;
-  color: white; 
-  background: black;
-  position: absolute;
-  padding: 6px 6px 4px 6px;
-} 
-
-.delete_button:hover, .card_heart:hover{
-  cursor: pointer;
-}
